--- a/index.html
+++ b/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
-<html>
-<head>
-<style>
-body	{background-color: powderblue;}
-h2	{color: red;}
-p	{color: green;}
-</style>
-</head>
+<html lang="en" dir="ltr">
+ <head>
+	<meta charset="utf-8>
+	<title>Pakohuone</title>
+	<link rel="stylesheet" href="style.css">
+
+ </head>
 <body>
-<title>Tilaa kakkuja</title>
-<h1><b>Tilaa haluamasi kakku jo tänään</b></h1>
-<h2>Saat ensimmäisen kakun ilmaiseksi kun painat linkkiä</h2>
-<img src="https://i.pinimg.com/originals/e5/74/cd/e574cdfe2307e0b7698895ba520df73b.png">
-<p>Klikkaa tästä</p>
-<a href="https://i.imgflip.com/1rh0r7.jpg">Cake</a>
+
+	<div id="wrapper">
+
+
+<nav>
+
+<p>XONE Room</p>
+ <ul>
+	 <li> <a href-"#">Etu sivu</a></li>
+	 <li><a href-"#">Huoneet</a></li>
+		<ul>
+			<li><a href-"#">Pako Saunamökistä</a></li>
+			<li><a href-"#">Hulluntohtrin Legenda</a></li>
+			<li><a href-"#">Coming Soon</a></li>
+		</ul>
+	</li>
+	<li><a href-"#kuva">Mustavalko kuva</a></li>
+ </ul>
+ <p class="right small">Pakohuone</p>
+
+</nav>
+
+	<div class="content">
+	 <h1>h1 -otsikko</h1>
+	 <p>Paragraph-tekstiä</p>
+	</div>
+
+     </div>
+
 </body>
 </html>
