--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 	<div id="wrapper">
 
-
 <nav>
 
 <p>XONE Room</p>
@@ -25,13 +24,12 @@
 	</li>
 	<li><a href-"#kuva">Mustavalko kuva</a></li>
  </ul>
- <p class="right small">Pakohuone</p>
-
+ 
 </nav>
 
 	<div class="content">
-	 <h1>h1 -otsikko</h1>
-	 <p>Paragraph-tekstiä</p>
+	 <h1>XONE Room</h1>
+	 <p>Pakohuone harrastus</p>
 	</div>
 
      </div>
