--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	 <li><a href-"#">Huoneet</a></li>
 		<ul>
 			<li><a href-"#">Pako Saunamökistä</a></li>
-			<li><a href-"#">Hulluntohtrin Legenda</a></li>
+			<li><a href-"#">Hulluntohtorin Legenda</a></li>
 			<li><a href-"#">Coming Soon</a></li>
 		</ul>
 	</li>
