--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <p>XONE Room</p>
  <ul>
-	 <li> <a href-"#">Etu sivu</a></li>
-	 <li><a href-"#">Huoneet</a></li>
+	 <li> <a href-"#">Etusivu</a></li>
+	 <li><a href-"huoneet">Huoneet</a></li>
 		<ul>
 			<li><a href-"#">Pako Saunamökistä</a></li>
 			<li><a href-"#">Hulluntohtorin Legenda</a></li>
