--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
 	<meta charset="utf-8>
 	<title>Pakohuone</title>
-	<link rel="stylesheet" href="testi.css">
+	<link rel="stylesheet" href="style.css">
 
  </head>
 <body>
