--- a/huoneet.html
+++ b/huoneet.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
  <head>
-	<meta charset="utf-8>
 	<title>Pakohuone</title>
 	<link rel="stylesheet" href="style.css">
  </head>
 <body>
+	
 	<div id="wrapper">
 <nav>
 <p>XONE Room</p>
@@ -21,9 +20,11 @@
  </ul>
  
 </nav>
+	
 	<div class="content">
-	 <h1>XONE Room</h1>
+		 <h1>Huoneet otsikko</h1>
 	</div>
-     </div>
+	
+	</div>
 </body>
 </html>
