--- a/huoneet.html
+++ b/huoneet.html
@@ -11,6 +11,7 @@
  <ul>
 	 <li> <a href-"#">Etusivu</a></li>
 	 <li><a href-"#">Huoneet</a></li>
+	 <li><a href-"#">Info</a></li>
 		<ul>
 			<li><a href-"#">Pako Saunamökistä</a></li>
 			<li><a href-"#">Hulluntohtorin Legenda</a></li>
