--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  <ul>
 	 <li> <a href-"#">Etusivu</a></li>
 	 <li><a href-"huoneet">Huoneet</a></li>
+	 <li><a href-"#">Info</a></li>
 		<ul>
 			<li><a href-"#">Pako Saunamökistä</a></li>
 			<li><a href-"#">Hulluntohtorin Legenda</a></li>
