--- a/huoneet.html
+++ b/huoneet.html
@@ -23,7 +23,10 @@
 </nav>
 	
 	<div class="content">
-		 <h1>Huoneet otsikko</h1>
+		<h1>Huoneet</h1>
+		<p>Pako Saunamökistä</p>
+		<p>Hulluntohtorin Legenda</p>
+		<p>Coming Soon</p>
 	</div>
 	
 	</div>
