--- a/info.html
+++ b/info.html
@@ -23,10 +23,10 @@
 </nav>
 	
 	<div class="content">
-		<h1>Huoneet</h1>
-		<p>Pako Saunamökistä</p>
-		<p>Hulluntohtorin Legenda</p>
-		<p>Coming Soon</p>
+		<h1>Auikioloajat</h1>
+		<p>Ma-Pe klo 17-22</p>
+		<p>La klo 12-19</p>
+		<p>Su kiinni</p>
 	</div>
 	
 	</div>
