--- a/info.html
+++ b/info.html
@@ -23,7 +23,7 @@
 </nav>
 	
 	<div class="content">
-		<h1>Auikioloajat</h1>
+		<h1>Aukioloajat</h1>
 		<p>Ma-Pe klo 17-22</p>
 		<p>La klo 12-19</p>
 		<p>Su kiinni</p>
