--- a/huoneet.html
+++ b/huoneet.html
@@ -23,10 +23,21 @@
 </nav>
 	
 	<div class="content">
-		<h1>Huoneet</h1>
-		<p>Pako Saunamökistä</p>
-		<p>Hulluntohtorin Legenda</p>
-		<p>Coming Soon</p>
+		<h1>Pako Saunamökistä</h1>
+		<p></p>
+		<h1>Hulluntohtorin Legenda</h1>
+		<p></p>
+		<h1>Coming Soon</h1>
+		<p>Lisää huoneita on tulossa ja suraava on jo suunnitteilla. 
+		Ensikesäksi olis tarkoitus saada uusi huone valmiiksi.
+		Uusi huone tulee pitämään sisällään classisen pakohuone tyylin.
+		Huone tulee pitämään sisällään normaaleja pakohuone ongelmaratkaisu tehtäviä.
+		Huone tulee sopimaan uusille pelaajille sekä konkareille.
+		Visuaalisuutta ei vielä ole suunniteltu, 
+		mutta rakenne on valmis ja minkä tyylinen huone tulee olemaan.
+		Toista vastaavaa huonetta ei ole nähty, joten hypää mukaan testaamaan
+		classista, mutta mystistä pakohuone peliä.
+		</p>
 	</div>
 	
 	</div>
