--- a/huoneet.html
+++ b/huoneet.html
@@ -9,15 +9,15 @@
 <nav>
 <p>XONE Room</p>
  <ul>
-	 <li> <a href-"#">Etusivu</a></li>
-	 <li><a href-"#">Huoneet</a>
+	 <li> <a href-"index">Etusivu</a></li>
+	 <li><a href-"huoneet">Huoneet</a>
 		<ul>
 			<li><a href-"#">Pako Saunamökistä</a></li>
 			<li><a href-"#">Hulluntohtorin Legenda</a></li>
 			<li><a href-"#">Coming Soon</a></li>
 		</ul>
 	</li>
-	 <li><a href-"#">Info</a></li>
+	 <li><a href-"info">Info</a></li>
  </ul>
  
 </nav>
