--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p>XONE Room</p>
  <ul>
-	 <li> <a href-"#">Etusivu</a></li>
+	 <li> <a href-"index">Etusivu</a></li>
 	 <li> <a href-"huoneet">Huoneet</a>
 		<ul>
 			<li><a href-"#">Pako Saunamökistä</a></li>
