--- a/info.html
+++ b/info.html
@@ -9,24 +9,23 @@
 <nav>
 <p>XONE Room</p>
  <ul>
-	 <li> <a href-"#">Etusivu</a></li>
-	 <li><a href-"#">Huoneet</a>
+	 <li> <a href-"index">Etusivu</a></li>
+	 <li><a href-"huoneet">Huoneet</a>
 		<ul>
 			<li><a href-"#">Pako Saunamökistä</a></li>
 			<li><a href-"#">Hulluntohtorin Legenda</a></li>
 			<li><a href-"#">Coming Soon</a></li>
 		</ul>
 	</li>
-	 <li><a href-"#">Info</a></li>
+	 <li><a href-"info">Info</a></li>
  </ul>
  
 </nav>
 	
 	<div class="content">
-		<h1>Aukioloajat</h1>
+		<h2>Aukioloajat</h2>
 		<p>Ma-Pe klo 17-22</p>
 		<p>La klo 12-19</p>
-		<p>Su kiinni</p>
 	</div>
 	
 	</div>
