--- a/info.html
+++ b/info.html
@@ -24,8 +24,10 @@
 	
 	<div class="content">
 		<h2>Aukioloajat</h2>
-		<p>Ma-Pe klo 17-22</p>
-		<p>La klo 12-19</p>
+		<p>Ma-Pe</p>
+		<p>klo 16-21</p>
+		<p>La-Su</p>
+		<p>klo 12-18</p>
 	</div>
 	
 	</div>
