--- a/info.html
+++ b/info.html
@@ -24,10 +24,8 @@
 	
 	<div class="content">
 		<h2>Aukioloajat</h2>
-		<p>Ma-Pe</p>
-		<p>klo 16-21</p>
-		<p>La-Su</p>
-		<p>klo 12-18</p>
+		<p>Ma-Pe	klo 16-21</p>
+		<p>La-Su	klo 12-18</p>
 	</div>
 	
 	</div>
