--- a/huoneet.html
+++ b/huoneet.html
@@ -24,19 +24,23 @@
 	
 	<div class="content">
 		<h2>Pako Saunamökistä</h2>
-		<p></p>
+		<p>Pako Saunamökistä on ollut ensimäinen huone minkä olemme tehneet.
+		Huone on hieman vaikeammasta päästä ja pitää sisällään hankalia päättely tehtäviä.
+		Olette saapuneet mökille vietäämään ansaittua kesälomaa, mutta olette jääneet jumiin
+		saunamökkiin. Pääsettekö ulos mökistä ennenkuin kesäloma on loppu?
+		</p>
 		<h2>Hulluntohtorin Legenda</h2>
 		<p></p>
 		<h2>Coming Soon</h2>
-		<p>Lisää huoneita on tulossa ja suraava on jo suunnitteilla. 
-		Ensikesäksi olis tarkoitus saada uusi huone valmiiksi.
-		Uusi huone tulee pitämään sisällään classisen pakohuone tyylin.
+		<p>Lisää huoneita on tulossa ja seuraava on jo suunnitteilla. 
+		Ensikesäksi olis tarkoitus saada uusi huone.
+		Uusi huone tulee olemaan tyyliltään classinen pakohuone.
 		Huone tulee pitämään sisällään normaaleja pakohuone ongelmaratkaisu tehtäviä.
 		Huone tulee sopimaan uusille pelaajille sekä konkareille.
 		Visuaalisuutta ei vielä ole suunniteltu, 
 		mutta rakenne on valmis ja minkä tyylinen huone tulee olemaan.
 		Toista vastaavaa huonetta ei ole nähty, joten hypää mukaan testaamaan
-		classista, mutta mystistä pakohuone peliä.
+		classista, mutta mystistä pakohuonetta.
 		</p>
 	</div>
 	
